@@ -1,7 +1,6 @@
 package com.devwinter.memberservice.adapter.input.api;
 
 import com.epages.restdocs.apispec.HeaderDescriptorWithType;
-import com.epages.restdocs.apispec.MockMvcRestDocumentationWrapper;
 import com.epages.restdocs.apispec.ResourceSnippetParameters;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -10,26 +9,30 @@ import org.springframework.boot.test.autoconfigure.restdocs.AutoConfigureRestDoc
 import org.springframework.http.HttpHeaders;
 import org.springframework.restdocs.constraints.ConstraintDescriptions;
 import org.springframework.restdocs.constraints.ResourceBundleConstraintDescriptionResolver;
+import org.springframework.restdocs.mockmvc.MockMvcRestDocumentation;
 import org.springframework.restdocs.mockmvc.RestDocumentationResultHandler;
 import org.springframework.restdocs.payload.FieldDescriptor;
 import org.springframework.restdocs.payload.JsonFieldType;
+import org.springframework.restdocs.payload.PayloadDocumentation;
 import org.springframework.restdocs.request.RequestPartDescriptor;
 import org.springframework.restdocs.snippet.Attributes;
-import org.springframework.restdocs.snippet.Attributes.Attribute;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.web.context.WebApplicationContext;
+import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.multipart.support.StandardMultipartHttpServletRequest;
 
 import java.security.SecureRandom;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Base64;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import static com.epages.restdocs.apispec.ResourceDocumentation.resource;
 import static com.epages.restdocs.apispec.Schema.schema;
-import static org.springframework.http.HttpHeaders.AUTHORIZATION;
 import static org.springframework.restdocs.operation.preprocess.Preprocessors.*;
 import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWithPath;
+import static org.springframework.restdocs.payload.PayloadDocumentation.requestPartBody;
 import static org.springframework.restdocs.request.RequestDocumentation.requestParts;
 
 @AutoConfigureRestDocs
@@ -39,11 +42,25 @@ public abstract class AbstractRestDocs {
     @Autowired
     protected ObjectMapper objectMapper;
 
+    @Autowired
+    private WebApplicationContext context;
+
+    protected static final String BASE_URL = "/api/v1/members";
+
+//    @BeforeEach
+//    void setup() throws ServletException {
+//        DelegatingFilterProxy delegateProxyFilter = new DelegatingFilterProxy();
+//        delegateProxyFilter.init(new MockFilterConfig(context.getServletContext(), "JwtTokenFilter"));
+//        this.mockMvc = MockMvcBuilders.webAppContextSetup(this.context)
+//                                      .addFilter(delegateProxyFilter)
+//                                      .build();
+//    }
+
     private static final SecureRandom secureRandom = new SecureRandom(); //threadsafe
     private static final Base64.Encoder base64Encoder = Base64.getUrlEncoder(); //threadsafe
 
-    private String generateAccessToken() {
-        byte[] randomBytes = new byte[24];
+    protected String generateAccessToken() {
+        byte[] randomBytes = new byte[32];
         secureRandom.nextBytes(randomBytes);
         return base64Encoder.encodeToString(randomBytes);
     }
@@ -65,7 +82,8 @@ public abstract class AbstractRestDocs {
             Class<?> responseClass,
             List<FieldDescriptorDto> requestFields,
             List<FieldDescriptorDto> responseFields) {
-        return MockMvcRestDocumentationWrapper.document(
+
+        return MockMvcRestDocumentation.document(
                 documentInfo.getIdentifier(),
                 preprocessRequest(prettyPrint()),
                 preprocessResponse(prettyPrint()),
@@ -80,18 +98,20 @@ public abstract class AbstractRestDocs {
             Class<?> responseClass,
             List<RequestPartDescriptor> requestParts,
             List<FieldDescriptorDto> responseFields) {
-        return MockMvcRestDocumentationWrapper.document(
+
+        return MockMvcRestDocumentation.document(
                 documentInfo.getIdentifier(),
                 preprocessRequest(prettyPrint()),
                 preprocessResponse(prettyPrint()),
                 requestParts(requestParts),
                 resource(
-                        snippet(documentInfo, null, responseClass, null, responseFields)
+                        snippet(documentInfo, StandardMultipartHttpServletRequest.class, responseClass, null, responseFields)
                 )
         );
     }
 
     private ResourceSnippetParameters snippet(MemberApiDocumentInfo documentInfo, Class<?> requestClass, Class<?> responseClass, List<FieldDescriptorDto> requestFields, List<FieldDescriptorDto> responseFields) {
+
         return ResourceSnippetParameters.builder()
                                         .tag(documentInfo.getTag())
                                         .summary(documentInfo.getSummary())
@@ -100,14 +120,14 @@ public abstract class AbstractRestDocs {
                                         .responseSchema((responseClass != null) ? schema(responseClass.getName()) : null)
                                         .requestFields((requestFields != null) ? fields(requestFields) : new ArrayList<>())
                                         .responseFields((responseFields != null) ? fields(responseFields) : new ArrayList<>())
-                                        .requestHeaders((documentInfo.isCertification()) ?
-                                                Arrays.asList(
-                                                        new HeaderDescriptorWithType("MemberId").description("회원 Id"),
-                                                        new HeaderDescriptorWithType(AUTHORIZATION).description("JWT Access Token")
+                                        .requestHeaders(
+                                                (documentInfo.isCertification()) ?
+                                                List.of(
+                                                        new HeaderDescriptorWithType("MemberId").description("회원 Id")
+                                                        // new HeaderDescriptorWithType(AUTHORIZATION).description("JWT Access Token")
                                                 )
-                                                : new ArrayList<>()
+                                                : Collections.emptyList()
                                         )
-
                                         .build();
     }
 
@@ -136,14 +156,13 @@ public abstract class AbstractRestDocs {
             String path,
             JsonFieldType fieldType,
             String description,
-            Attribute attributes) {
+            Attributes.Attribute attributes) {
         static FieldDescriptorDto descriptor(String path, JsonFieldType fieldType, String description) {
             return new FieldDescriptorDto(path, fieldType, description, null);
         }
 
-        static FieldDescriptorDto descriptor(String path, JsonFieldType fieldType, String description, String constraints) {
-            return new FieldDescriptorDto(path, fieldType, description, Attributes.key(constraints)
-                                                                                  .value(constraints));
+        static FieldDescriptorDto descriptor(String path, JsonFieldType fieldType, String description, Attributes.Attribute attributes) {
+            return new FieldDescriptorDto(path, fieldType, description, attributes);
         }
     }
 }
